# AutoDevAI

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ai-assistant.yml  release.yml
action/: Dockerfile  action.yml  entrypoint.py
ai_engine/: agents.py  prompt_builder.py  provider_manager.py  response_parser.py  router.py
api_discovery/: api_ranker.py  api_searcher.py  api_validator.py  endpoint_extractor.py
backend/: config.py  main.py  scheduler.py
browser_agent/: crawler.py  docs_scanner.py  page_parser.py
code_analysis/: analyzer.py  ast_parser.py  security_scanner.py
database/: api_store.py  db_init.py  knowledge_store.py
github_bot/: command_parser.py  issue_handler.py  pr_reviewer.py  webhook_handler.py
knowledge_engine/: doc_extractor.py  repo_reader.py  summarizer.py
providers/: deepinfra_provider.py  groq_provider.py  huggingface_provider.py  image_provider.py  jules_provider.py  local_llm_provider.py  openrouter_provider.py
search_engines/: bing.py  brave.py  duckduckgo.py  searx.py
tests/: test_ai_engine.py  test_api_discovery.py  test_code_analysis.py
utils/: git_utils.py  http_client.py  logger.py
